fix: make renamer menu Java 8 compatible